--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <h1>
-    Holidae In       RIght THurr      ghmn 
+    hola
 </h1>
+    <img src="{{ url_for('static', filename='imgz/lebronjameslebronjames.jpg') }}" alt="Imagen del dios todopoderoso LeBron James">
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
