--- a/templates/acercade.html
+++ b/templates/acercade.html
@@ -31,9 +31,28 @@
         </nav>
     </header>
 
-    <div class="container mb-5">
-        <img src="{{ url_for('static', filename='imgz/lebronjameslebronjames.jpg') }}" alt="Imagen del dios todopoderoso LeBron James" class="img-fluid">
+    <h3 class="mb-4 text-center">Quien soy yo?</h3>
+    <div class="row justify-content-center"></div>
+            <img src="{{ url_for('static', filename='imgz/yo1.jpg') }}" alt="Imagen Mia" class="img-fluid w-25">
+</div>
+            <p class="mt-4">Tengo 17 años de edad, naci el 25 de Enero del 2008, mido 1.74 centimetros, lamentablemente no soy tan alto como LeBron James y...</p>
+        
+        <p>Me gusta ir al tianguis, a buscar los mejores precios en la mejor ropa, por eso odio a los revendedores. Me gusta escuchar musica y se que suena bien poser pero, de verdad la musica es parte de mi, siempre voy a identificarme con ella. Me gusta toda la comida menos la que no he probado y jamas lo hare porque no lo necesito raaaaa. Tambien me gustan los videojuegos, en especial Doki Doki Literature Club, Fallout 4 y muchos mas juegos que definitivamente me marcaron...</p>
     </div>
+
+    <div class="row justify-content-center">
+            <div class="col-md-3 mx-2">
+                <img src="{{ url_for('static', filename='imgz/yo2.png') }}" alt="Imagen 1" class="img-fluid w-100">
+    </div> 
+            <div class="col-md-3 mx-2">
+                <img src="{{ url_for('static', filename='imgz/yo3.png') }}" alt="Imagen 2" class="img-fluid w-100">
+    </div>
+            <div class="col-md-3 mx-2">
+                <img src="{{ url_for('static', filename='imgz/yo4.png') }}" alt="Imagen 3" class="img-fluid w-100">
+    </div>
+
+    <p class="mt-4">Sobre que quiero ser en el futuro, no lo se... odio esa pregunta porque me hace saber un poco lo mucho que tal vez, solo pienso en cosas que no me convienen. SUpongo que, quiero generar todo el dinero que pueda porque aunque no hace falta en mi familia, parece que a mi me falta con tantas cosas que quiero y no puedo. Tambien, en un futuro quiero ser mas maduro, mas prudente, y poder siempre decir de verdad lo que siento o pienso a quienes mas quiero... Ah y lo mas importante, Quiero cambiar, en todo....</p>
+    <img src="{{ url_for('static', filename='imgz/yo5.jpg') }}" alt="Yo de nuevo" class="img-fluid w-25">
 
     <footer class="bg-dark text-center py-3 fixed-bottom">
         <span class="rainbow-text">&copy; GCCA - 5D - Programación - CETis 61</span>
@@ -50,5 +69,6 @@
     color: transparent;
     font-weight: bold;
 }
+
 </style>
 </html>
