--- a/templates/vehiculos.html
+++ b/templates/vehiculos.html
@@ -31,9 +31,28 @@
         </nav>
     </header>
 
-    <div class="container mb-5">
-        <img src="{{ url_for('static', filename='imgz/lebronjameslebronjames.jpg') }}" alt="Imagen del dios todopoderoso LeBron James" class="img-fluid">
-    </div>
+<div class="container text-center mb-5">
+        <p>Aún quedan románticos que gustan de pocas asistencias, direcciones duras y suavidad cuestionable.
+        Todavía hay quienes prefieren arreglar con un par de herramientas, que someter el auto a un scanner.
+        Sin duda que hay quienes no se resignan a dejar de lidiar con el carburador y los frenos de tambor, la falta de ABS o la nula presencia de airbags.
+        Los autos antiguos, pese a las legislaciones de seguridad y ambientales, se niegan a desaparecer, puesto que los fanáticos de las tuercas los siguen prefiriendo por múltiples razones.</p>
+            <h5>Algunos vehiculos de algunas marcas reconocidos o con historia interesante de fondo son:</h5>
+                <h2>Seat: clave en la motorización de España</h4>
+                    <p>Fundada en 1950, sus primeros modelos como el Seat 600, hicieron accesible el automóvil a la clase trabajadora. Con el tiempo, evolucionó hasta convertirse en una marca global con modelos de éxito como el Seat Ibiza y el Seat León</p>
+                        <img src="{{ url_for('static', filename='imgz/vehiculo2.png') }}" alt="Seat" class="img-fluid w-25">
+                <h2>Pegaso: innovación y deportividad</h2>
+                    <p>Sus deportivos de los años 50, como el Z-102, son considerados joyas automovilísticas. Pegaso también llegó a fabricar camiones y vehículos militares, destacándose por su ingeniería avanzada.</p>
+                        <img src="{{ url_for('static', filename='imgz/vehiculo3.png') }}" alt="Pegaso" class="img-fluid w-25">
+                <h2>Hispano-Suiza: lujo y prestigio</h2>
+                    <p>Marca de lujo con sede en Guadalajara que fabricó modelos impresionantes a principios del siglo XX. Era famosa por sus automóviles elegantes y motores potentes, compitiendo con marcas como Rolls-Royce y Bugatti, dejando un legado imborrable en la historia automovilística.</p>
+                        <img src="{{ url_for('static', filename='imgz/vehiculo4.png') }}" alt="Hispano Suiza" class="img-fluid w-25">
+                <h2>Ford Mustang: el nacimiento del muscle car</h2>
+                    <p>El Ford Mustang, lanzado en 1964, revolucionó el mercado con su diseño accesible y deportivo. Su legado continúa con modelos modernos que siguen capturando la esencia del original.</p>
+                        <img src="{{ url_for('static', filename='imgz/vehiculo5.png') }}" alt="Ford Mustang" class="img-fluid w-25">
+                <h2>Chevrolet Bel Air: elegancia de los años 50</h2>
+                    <p>El Chevrolet Bel Air de 1957 es uno de los coches más representativos de la década. Su diseño con líneas cromadas, motor potente y confort lo hicieron un símbolo del sueño americano.</p>
+                        <img src="{{ url_for('static', filename='imgz/vehiculo6.png') }}" alt="Chevrolet Bel Air" class="img-fluid w-25">
+</div>
 
     <footer class="bg-dark text-center py-3 fixed-bottom">
         <span class="rainbow-text">&copy; GCCA - 5D - Programación - CETis 61</span>
@@ -50,5 +69,6 @@
     color: transparent;
     font-weight: bold;
 }
+
 </style>
 </html>
