--- a/templates/animales.html
+++ b/templates/animales.html
@@ -31,10 +31,35 @@
         </nav>
     </header>
 
-    <div class="container mb-5">
-        <img src="{{ url_for('static', filename='imgz/lebronjameslebronjames.jpg') }}" alt="Imagen del dios todopoderoso LeBron James" class="img-fluid">
-    </div>
-
+    <div class="container text-center mb-5">
+        <p>En el planeta tierra encontramos una variedad inmensa de animales y seres vivos con cualidades únicas que los hacen sumamente especiales y distintos. Existen todo tipo de mamíferos, aves, peces o insectos que nos harán estremecer o enternecer, dependiendo de cuales sean nuestros gustos. Entre estas distintas especies podemos hablar de los animales exóticos. Para quienes no sepan qué es un animal exótico, se refiere a aquellos animales que no se encuentran dentro de su hábitat natural y potencial, por lo que son animales no autóctonos de la zona en la que viven</p>
+            <h5>Algunos ejemplos de animales exoticos terrestres son:</h5>
+                <h2>Slow loris o loris perezoso (Nycticebus)</h4>
+                    <p>El slow loris, mono lento o loris perezoso (Nycticebus) es un tipo de primate que habita en Asia y está considerado como uno de los animales más exóticos y lentos del mundo. Su historia evolutiva es misteriosa ya que apenas se han encontrado restos fósiles de sus antepasados.
+                    Este animal exótico del mundo no posee apenas protección contra sus depredadores y por ello ha desarrollado una glándula en las axilas que supura veneno. Lame la secreción y al mezclarse con la saliva se vuelve activa, muerden a los depredadores e incluso aplican el veneno en el pelaje de sus crías con tal de protegerlas.</p>
+                        <img src="{{ url_for('static', filename='imgz/exotico2.png') }}" alt="Mono lento" class="img-fluid w-25">
+                <h2>Escalopendra gigante (Scolopendra gigantea)</h2>
+                    <p>La escalopendra gigante o Scolopendra gigantea es una especie de ciempiés gigante que se encuentra en las tierras bajas de Venezuela, Colombia, islas de Trinidad y Jamaica. Se trata de un animal carnívoro que se alimenta de reptiles, anfibios, e incluso mamíferos como ratones y murciélagos.
+                    Este animal exótico puede sobrepasar los 30 centímetros de longitud y presenta tenazas provistas de veneno con las que puede llegar a producir dolor, escalofríos, fiebre y debilidad. Solo se conoce un caso de muerte humana por el veneno de la escolopendra en Venezuela.</p>
+                        <img src="{{ url_for('static', filename='imgz/exotico3.png') }}" alt="Escalopendra gigante" class="img-fluid w-25">
+            <h5>Algunos ejemplos de animales exoticos acuaticos son:</h5>
+                <h2>Dragones de mar (Phycodurus eques)</h2>
+                    <p>El dragón de mar es un precioso pez marino de la misma familia que el caballito de mar. Originario de Australia, posee largas prolongaciones en forma de hoja que se distribuyen por todo el cuerpo, lo que le ayuda en su camuflaje. Este es uno de los animales exóticos más deseados del mundo.
+                    Parece un alga flotante y por sus características físicas es objeto de diversas amenazas. Son atrapados por coleccionistas e incluso utilizados en medicina alternativa. Su estado actual es de preocupación menor, aún así, están protegidos por el gobierno Australiano.</p>
+                        <img src="{{ url_for('static', filename='imgz/exotico4.png') }}" alt="Dragon de mar" class="img-fluid w-25">
+                <h2>Caulophryne jordani (Caulophryne jordani)</h2>
+                    <p>Estos animales exóticos forman parte del género de los peces abisales, que habitan en las zonas más profundas y recónditas de los océanos de todo el mundo y apenas se tiene información clara de su comportamiento y vida. Tiene un pequeño órgano luminoso con el que atrae a sus presas.
+                    Las dificultades que tienen para encontrar pareja en la oscuridad hace que las hembras, de gran tamaño, se conviertan en hospedadoras del macho que entra dentro de su cuerpo como un parásito y la mantiene fecundada de por vida.</p>
+                        <img src="{{ url_for('static', filename='imgz/exotico5.png') }}" alt="Caulophryne jordani" class="img-fluid w-25">
+            <h5>Algunos ejemplos de animales exoticos aereos son:</h5>
+                <h2>Cóndor de los Andes (Vultur gryphus)</h2>
+                    <p>El cóndor andino (Vultur gryphus) se distribuye desde Colombia, Ecuador, Perú, Bolivia y Chile hasta Argentina, desarrollándose en pastizales abiertos, bosques nubosos, áreas desérticas y australes. Sin duda, es un ave muy peculiar y majestuosa, ya que mide alrededor de 1 a 1,30 metros, con una envergadura alar de 3,2 metros y una masa promedio de 10,8 kg. El plumaje es oscuro, con plumas claras alrededor del cuello, y las plumas de vuelo son blancas, más pronunciadas en los machos. La cabeza y el cuello están desprovistos de plumaje. Su estado de conservación es "vulnerable".</p>
+                        <img src="{{ url_for('static', filename='imgz/exotico6.png') }}" alt="Cóndor de los Andes" class="img-fluid w-25">
+            <h2>Colibrí picoespada (Ensifera ensifera)</h2>
+                    <p>El colibrí picoespada (Ensifera ensifera) es otra ave nativa de varios países de Suramérica, como Colombia, Venezuela, Perú y Ecuador, y es un animal muy peculiar además de hermoso. Se trata de una especie de colibrí grande, que mide unos 14 cm y pesa entre 10 y 15 gramos. Presenta una coloración verde bronce en la parte superior del cuerpo, pero los machos tienen la parte inferior de un verde metálico, el vientre gris y la cola verde bronce. Las hembras también muestran un tono verde bronce en la parte superior, pero en la parte inferior son blancuzcas, con la garganta gris y el vientre verdoso. La peculiaridad de esta ave radica en su largo pico, el cual es de mayor tamaño que su propio cuerpo.</p>
+                        <img src="{{ url_for('static', filename='imgz/exotico7.png') }}" alt="Colibrí picoespada" class="img-fluid w-25">
+</div>
+    
     <footer class="bg-dark text-center py-3 fixed-bottom">
         <span class="rainbow-text">&copy; GCCA - 5D - Programación - CETis 61</span>
     </footer>
@@ -50,5 +75,6 @@
     color: transparent;
     font-weight: bold;
 }
+
 </style>
 </html>
